
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int GPA ;
 int LLA ;
 scalar_t__ bsh ;
 int memcpy (scalar_t__,int*,int) ;

void fixsh() {
 int gpa=GPA^0xdededede, lla=LLA^0xdededede;
 memcpy(bsh+0x1a,&gpa,4);
 memcpy(bsh+0x2b,&lla,4);
}
