; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_395.c_fixsh.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_395.c_fixsh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPA = common dso_local global i32 0, align 4
@LLA = common dso_local global i32 0, align 4
@bsh = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fixsh() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @GPA, align 4
  %4 = xor i32 %3, -555819298
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @LLA, align 4
  %6 = xor i32 %5, -555819298
  store i32 %6, i32* %2, align 4
  %7 = load i64, i64* @bsh, align 8
  %8 = add nsw i64 %7, 26
  %9 = call i32 @memcpy(i64 %8, i32* %1, i32 4)
  %10 = load i64, i64* @bsh, align 8
  %11 = add nsw i64 %10, 43
  %12 = call i32 @memcpy(i64 %11, i32* %2, i32 4)
  ret void
}

declare dso_local i32 @memcpy(i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
